tests/invalid/incomplete-derivation.pskcxml
<?xml version="1.0" encoding="UTF-8"?>

<!--
  Based on the Figure 7 example, this file is has an incomplete key
  derivation specification.
-->

<pskc:KeyContainer Version="1.0"
  xmlns:pskc="urn:ietf:params:xml:ns:keyprov:pskc"
  xmlns:xenc11="http://www.w3.org/2009/xmlenc11#"
  xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
  <pskc:EncryptionKey>
    <xenc11:DerivedKey>
      <xenc11:KeyDerivationMethod
        Algorithm="http://www.rsasecurity.com/rsalabs/pkcs/schemas/pkcs-5v2-0#pbkdf2">
      </xenc11:KeyDerivationMethod>
      <xenc11:MasterKeyName>My Password 1</xenc11:MasterKeyName>
    </xenc11:DerivedKey>
  </pskc:EncryptionKey>
  <pskc:MACMethod
    Algorithm="http://www.w3.org/2000/09/xmldsig#hmac-sha1">
    <pskc:MACKey>
      <xenc:EncryptionMethod
      Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
      <xenc:CipherData>
        <xenc:CipherValue>2GTTnLwM3I4e5IO5FkufoOEiOhNj91fhKRQBtBJYluUDsPOLTfUvoU2dStyOwYZx</xenc:CipherValue>
      </xenc:CipherData>
    </pskc:MACKey>
  </pskc:MACMethod>
  <pskc:KeyPackage>
    <pskc:Key Algorithm="urn:ietf:params:xml:ns:keyprov:pskc:hotp" Id="123456">
      <pskc:Data>
        <pskc:Secret>
          <pskc:EncryptedValue Id="ED">
            <xenc:EncryptionMethod
              Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
            <xenc:CipherData>
              <xenc:CipherValue>oTvo+S22nsmS2Z/RtcoF8Hfh+jzMe0RkiafpoDpnoZTjPYZu6V+A4aEn032yCr4f</xenc:CipherValue>
            </xenc:CipherData>
          </pskc:EncryptedValue>
          <pskc:ValueMAC>LP6xMvjtypbfT9PdkJhBZ+D6O4w=</pskc:ValueMAC>
        </pskc:Secret>
      </pskc:Data>
    </pskc:Key>
  </pskc:KeyPackage>
</pskc:KeyContainer>
